[gd_scene load_steps=9 format=3 uid="uid://dp2j8y2guvxd7"]

[ext_resource type="Script" uid="uid://cn7u7gk3xc3wv" path="res://Scripts/Gameplay/SceneryBGController.gd" id="1_o44p5"]
[ext_resource type="Texture2D" uid="uid://cx8t3yuhcohjd" path="res://Sprites/Background/Sky2.png" id="2_gdyhk"]
[ext_resource type="Texture2D" uid="uid://cmyfhf7bj3w4t" path="res://Sprites/Background/HDB2.png" id="3_xappe"]
[ext_resource type="Texture2D" uid="uid://r22f5aa6souk" path="res://Sprites/Background/Tree2.png" id="4_p2hkp"]

[sub_resource type="Animation" id="Animation_qpyho"]
resource_name = "EnteringStation"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:mScrollSpeedScaler")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.46667),
"transitions": PackedFloat32Array(1.5, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_cl84y"]
resource_name = "LeavingStation"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:mScrollSpeedScaler")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 1.46667),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_38oc0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:mScrollSpeedScaler")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qpyho"]
_data = {
&"EnteringStation": SubResource("Animation_qpyho"),
&"LeavingStation": SubResource("Animation_cl84y"),
&"RESET": SubResource("Animation_38oc0")
}

[node name="SceneryBackground" type="Node2D"]
z_index = -1
script = ExtResource("1_o44p5")
mSkyScrollSpeed = 500.0
mHDBScrollSpeed = 1500.0
mTreeScrollSpeed = 2000.0

[node name="SkySection1" type="Sprite2D" parent="."]
position = Vector2(-1920, 0)
texture = ExtResource("2_gdyhk")

[node name="SkySection2" type="Sprite2D" parent="."]
texture = ExtResource("2_gdyhk")

[node name="SkySection3" type="Sprite2D" parent="."]
position = Vector2(1920, 0)
texture = ExtResource("2_gdyhk")

[node name="HDBSection1" type="Sprite2D" parent="."]
position = Vector2(-1920, 0)
texture = ExtResource("3_xappe")

[node name="HDBSection2" type="Sprite2D" parent="."]
texture = ExtResource("3_xappe")

[node name="HDBSection3" type="Sprite2D" parent="."]
position = Vector2(1920, 0)
texture = ExtResource("3_xappe")

[node name="TreeSection1" type="Sprite2D" parent="."]
position = Vector2(-1920, 30)
texture = ExtResource("4_p2hkp")

[node name="TreeSection2" type="Sprite2D" parent="."]
position = Vector2(0, 30)
texture = ExtResource("4_p2hkp")

[node name="TreeSection3" type="Sprite2D" parent="."]
position = Vector2(1920, 30)
texture = ExtResource("4_p2hkp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qpyho")
}
